Create test data for CurriculumLoaderTest
References: #16